idf_component_register(SRCS
"button.cpp"
"buttons.cpp"
"flash_io.cpp"
"globals.cpp"
"http_server.cpp"
"http_server_base.cpp"
"i2c_bus.cpp"
"main.cpp"
"misc_hw.cpp"
"network.cpp"
"nv_storage.cpp"
"nvram.cpp"
"parser.cpp"
"tcp_server.cpp"
"tcp_server_base.cpp"
"stack_track.cpp"
"webpage.cpp"
INCLUDE_DIRS ".")
